Fix building WatchListItemDto from user's watch list